--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,8 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <meta name="theme-color" content="#000000" />
+    <script src="https://aframe.io/releases/0.7.0/aframe.min.js"></script>
+    <script src="https://rawgit.com/jeromeetienne/ar.js/master/aframe/build/aframe-ar.js"></script>
 
     <!--
     manifest.json proporciona metadatos utilizados cuando su aplicación web se agrega a
@@ -63,6 +65,18 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" 
     integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" 
     crossorigin="anonymous"></script>
+
+
+
+    <!-- file index.html -->
+  <script src="./aframe.js"></script>
+  <script src="./aframe-ar.js"></script>
+  <body style='margin : 0px; overflow: hidden;'>
+		<div id=marker></div>
+	<script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
+        <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
+	<script src="https://unpkg.com/babel-standalone@6.15.0/babel.min.js"></script>
+	<script type="text/babel" src="af.js"></script>
 
   </body>
 </html>
