--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,9 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
+     <!--  -->
     <meta name="theme-color" content="#000000" />
+     <!-- Aqui coloque los script que son nesesario para la realidad aumentada  -->
     <script src="https://aframe.io/releases/0.7.0/aframe.min.js"></script>
     <script src="https://rawgit.com/jeromeetienne/ar.js/master/aframe/build/aframe-ar.js"></script>
 
